// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Component should render span element by default 1`] = `
.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

<div>
  <span
    class="c0"
  />
</div>
`;

exports[`Text Component should render strong html tag for textWeight ExtraStrong 1`] = `
.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 800;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

<div>
  <strong
    class="c0"
  />
</div>
`;

exports[`Text Component should render strong html tag for textWeight Strong 1`] = `
.c0 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 700;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

<div>
  <strong
    class="c0"
  />
</div>
`;

exports[`Text Component should render with all the props 1`] = `
.c0 {
  margin: 0;
  color: pink;
  font-size: 1.4rem;
  font-weight: 300;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  display: block;
  margin: 8px 0;
  text-transform: uppercase;
  -webkit-text-decoration: line-through;
  text-decoration: line-through;
}

<div>
  <span
    class="c0"
  />
</div>
`;
